--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -10,6 +10,11 @@ $burgundy: #B7071B;
 	padding: 0;
 	font-family: 'Source Sans Pro', sans-serif;
 }
+
+body {
+	background:#e9e9e9;
+}
+
 header{
 	position: fixed;
 	background-color: $white;
@@ -78,4 +83,28 @@ header{
 			margin: 0 5px;
 		}
 	}
+}
+
+
+.container {
+	width:90%;
+	margin:15px auto;
+}
+
+.item {
+	width:220px;
+	background:#fff;
+	float:left;
+	margin-right:15px;
+	margin-bottom:15px;
+	box-shadow:0 1px 2px 0 rgba(0,0,0,0.22);
+}
+
+.item p {
+	padding:10px;
+	font-size:13px;
+}
+
+.item img {
+	width:100%;
 }
