--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,7 +4,7 @@
 .modal {
   display: none;
   position: fixed;
-  // background: black;
+  background: black;
   top: 0;
   left: 300px;
   width: 100%;
@@ -19,14 +19,14 @@
   margin: 15px;
 }
 
-.cerrar {
-  background: #FFF;
-  margin: 15px;
-  text-align: center;
-  text-decoration: none;
-  font-size: 6em;
-  color: #fff;
-  padding: 5px;
-  border-radius: 100%;
-}
+// .cerrar {
+//   background: #FFF;
+//   margin: 15px;
+//   text-align: center;
+//   text-decoration: none;
+//   font-size: 6em;
+//   color: #fff;
+//   padding: 5px;
+//   border-radius: 100%;
+// }
 
