--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -15,10 +15,8 @@ body {
 	background:#e9e9e9;
 }
 
-header{
-	position: fixed;
-	background-color: $white;
-	z-index: 1000;
+header {
+	margin-bottom: 30px;
 }
 .a-menu{
 	display: inline-block;
